cambios de nombre y metodos

--- a/Frontend/src/main/resources/templates/Booking.html
+++ b/Frontend/src/main/resources/templates/Booking.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org>
 <head>
 	<title> BOOKING </title>
 </head>
@@ -67,3 +68,4 @@
 		<button> GO BACK </button>
 	</p>
 </body>
+</html>
