--- a/Frontend/src/main/resources/templates/ShowGoing.html
+++ b/Frontend/src/main/resources/templates/ShowGoing.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org>
   <head>
 	<title>FLIGHTS FOUND</title>
   </head>
@@ -48,3 +49,4 @@
 	</div>
 	
   </body>
+  </html>
