Cambie background y añadi una pag

--- a/Frontend/src/main/resources/templates/Busqueda.html
+++ b/Frontend/src/main/resources/templates/Busqueda.html
@@ -5,7 +5,7 @@
 	
 </head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<body text="white" background="C:\Users\extmcarro\Desktop\LogoAerolinea.jpg" background-position="bottom" "right">
+<body text="white" background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTTUnI0DSwnGUJw8A2fGVOoCPcYHY45fTgRhPZtlZowPpKU4VwBg" background-position="bottom" "right">
 <h1>Search Flights</h1>
 	<br>
 	<br>
