--- a/Frontend/src/main/resources/templates/InsertarVuelos.html
+++ b/Frontend/src/main/resources/templates/InsertarVuelos.html
@@ -2,7 +2,7 @@
 <head>
 	<title>INSERT FLIGHTS</title>
 </head>
-<body background= "C:\Users\extsvazquez\Downloads\LogoAerolinea.jpg" style="color:#FFFFFF">
+<body background= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTTUnI0DSwnGUJw8A2fGVOoCPcYHY45fTgRhPZtlZowPpKU4VwBg" style="color:#FFFFFF">
 	<h1> INSERT FLIGHTS </h1>
 	<br>
 	<h2 align='center'>INSERT</h2>
