--- a/Frontend/src/main/resources/templates/compra2.html
+++ b/Frontend/src/main/resources/templates/compra2.html
@@ -5,7 +5,7 @@
 		<title>Confirm purchase</title>
 		<link rel="stylesheet" type="text/css" href="../css/estilo.css">
 	</head>
-	<body text="white" background="css\LogoAerolinea.jpg">
+	<body text="white" background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTTUnI0DSwnGUJw8A2fGVOoCPcYHY45fTgRhPZtlZowPpKU4VwBg">
 		<header>
 			<h2>Your trip to "destination"</h2>
 		</header>
