--- a/Frontend/src/main/resources/templates/login.html
+++ b/Frontend/src/main/resources/templates/login.html
@@ -5,7 +5,7 @@
 <title>Login</title>
 </head>
 
-<body text="white" background="C:\Users\EXTealvarino\DragonRidesBookingBackend\LogoAerolinea.jpg">
+<body text="white" background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTTUnI0DSwnGUJw8A2fGVOoCPcYHY45fTgRhPZtlZowPpKU4VwBg">
 <h1>LOGIN </h1> 
 
 <form name="login"> 
