--- a/Frontend/src/main/resources/templates/PaginaBooking.html
+++ b/Frontend/src/main/resources/templates/PaginaBooking.html
@@ -2,7 +2,7 @@
 <head>
 	<title> BOOKING </title>
 </head>
-<body background= "C:\Users\extsvazquez\Downloads\LogoAerolinea.jpg" style="color:#FFFFFF">
+<body background= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTTUnI0DSwnGUJw8A2fGVOoCPcYHY45fTgRhPZtlZowPpKU4VwBg" style="color:#FFFFFF">
 	<h1> BOOKING </h1>
 	<br>
 	<h2 align='center'> YOUR FLIGHTS <h2>
