--- a/Frontend/src/main/resources/templates/insertarDescuentos.html
+++ b/Frontend/src/main/resources/templates/insertarDescuentos.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 	<head>
 	<link href="estilos/estilos.css" rel="stylesheet" type="text/css">
 	</head>
