--- a/Frontend/src/main/resources/templates/Goingback.html
+++ b/Frontend/src/main/resources/templates/Goingback.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 <link href="estilos/estilos.css" rel="stylesheet" type="text/css">
 </head>
