--- a/Frontend/src/main/resources/templates/InsertFlights.html
+++ b/Frontend/src/main/resources/templates/InsertFlights.html
@@ -1,4 +1,5 @@
 <!DOCTYPE HTML>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<title>INSERT FLIGHTS</title>
 </head>
@@ -101,3 +102,4 @@
 		</div>
 	
 </body>
+</html>
