--- a/Frontend/src/main/resources/templates/Search.html
+++ b/Frontend/src/main/resources/templates/Search.html
@@ -16,11 +16,11 @@
 <p>Departures</p>
   <input list="Departure" name="Departure">
   <datalist id="Departure">
-    <option value="Gondolin">
-    <option value="Rivendel">
-    <option value="Nargothrond">
-    <option value="Mithlond">
-    <option value="Tirion">
+    <option value="">
+    <option value="">
+    <option value="">
+    <option value="">
+    <option value="">
   </datalist>
 </form>
 </th>
@@ -30,11 +30,11 @@
 <p>Destination</p>
   <input list="Departure" name="Departure">
   <datalist id="Departure">
-    <option value="Gondolin">
-    <option value="Rivendel">
-    <option value="Nargothrond">
-    <option value="Mithlond">
-    <option value="Tirion">
+    <option value="">
+    <option value="">
+    <option value="">
+    <option value="">
+    <option value="">
   </datalist>
 </form>
 </th>
@@ -58,11 +58,11 @@
 <p>Airline</p>
   <input list="Airline" name="Airline">
   <datalist id="Airline">
-    <option value="Jormunand">
-    <option value="Wawel">
-    <option value="LaidlyWorm">
-    <option value="Sirrush">
-    <option value="Tiamat">
+    <option value="">
+    <option value="">
+    <option value="">
+    <option value="">
+    <option value="">
   </datalist>
 </form>
 </th>
