--- a/Frontend/src/main/resources/templates/InsertFlights.html
+++ b/Frontend/src/main/resources/templates/InsertFlights.html
@@ -99,6 +99,7 @@
 			<button> SAVE </button>
 			<button> UPDATE </button>
 			<button> DELETE </button>
+			<button> DISCOUNTS </button>
 		</div>
 	
 </body>
