--- a/Frontend/src/main/resources/templates/Choosing.html
+++ b/Frontend/src/main/resources/templates/Choosing.html
@@ -7,11 +7,11 @@
 <body background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTTUnI0DSwnGUJw8A2fGVOoCPcYHY45fTgRhPZtlZowPpKU4VwBg" style="color:#FFFFFF">
 	<h1> CHOOSE ONE OPTION </h1>
 	<div style="width: 330px; margin: 0 auto;">
-		<button> SEARCH </button>
-		<button> MY FLIGHTS </button>
+		<button><a href="Search"> SEARCH </a></button>
+		<button><a href="Booking"> MY FLIGHTS </a></button>
 	</div>
 		<p align='center' >
-			<button> GO BACK </button>
+			<button><a href="login"> GO BACK </a></button>
 		</p>
 </body>
 </html>
