--- a/Frontend/src/main/resources/templates/login.html
+++ b/Frontend/src/main/resources/templates/login.html
@@ -41,20 +41,23 @@ var done=0;
 var usuario=document.login.usuario.value; 
 var password=document.login.password.value; 
 if (usuario=="ernesto" && password=="123") { 
-window.location="index.html"; 
+window.location="Choosing"; 
 } 
 if (usuario=="ruben" && password=="123") { 
-window.location="index.html"; 
+window.location="Choosing"; 
 } 
 if (usuario=="sergio" && password=="123") { 
-window.location="index.html"; 
+window.location="Choosing"; 
 } 
 if (usuario=="carlos" && password=="123") { 
-window.location="index.html"; 
+window.location="Choosing"; 
 } 
 if (usuario=="martin" && password=="123") { 
-window.location="index.html"; 
+window.location="Choosing"; 
 } 
+if (usuario=="root" && password=="admin") { 
+window.location="InsertFlights"; 
+}
 if (usuario=="" && password=="") { 
 alert("Enter User and Pass!");
 } 
