--- a/Frontend/src/main/resources/templates/Goingback.html
+++ b/Frontend/src/main/resources/templates/Goingback.html
@@ -176,8 +176,13 @@ width="500" height="500"/>
 
 	</table>
 	<form>
-  <input type = "button" value = "Volver" style="text-align:center" onclick = "history.go (-1)">
+  <input type = "button" value = "Volver" style="text-align:center" onclick = "Search()">
 </form>
+<script language="JavaScript"> 
+function Search(){ 
+window.location="Search";
+}
+</script>
 </body>
 
 </html>
