--- a/Frontend/src/main/resources/templates/Search.html
+++ b/Frontend/src/main/resources/templates/Search.html
@@ -67,17 +67,17 @@
 </form>
 </th>
 <th width="50%">
-</th>
+</th> 
 <th>
 <form action="/action_page.php">
-<input type="checkbox" name="vehicle1" value="Bike">
+<input type="checkbox" name="roundtrip" value="typeTrip">
 roundtrip
 </form> 
 </th>
 </tr>
 </table>
 <div align='center' >
-    <button class='btn-bot'>Search</button>
-</div>
+		    <button class='btn-bot'><a href="GoingBack">Search</a></button>
+		</div>	
 </body>	
 </html>
