--- a/Frontend/src/main/resources/templates/Search.html
+++ b/Frontend/src/main/resources/templates/Search.html
@@ -39,13 +39,13 @@
 </form>
 </th>
 <th>
-<p>Departure Datetime</p>
+<p>Departure Date</p>
 <form action="/action_page.php">
   <input type="date" name="bdaytime">
 </form>
 </th>
 <th>
-<p>Return Datetime</p>
+<p>Return Date</p>
 <form action="/action_page.php">
   <input type="date" name="bdaytime">
 </form>
