--- a/Frontend/src/main/resources/templates/Booking.html
+++ b/Frontend/src/main/resources/templates/Booking.html
@@ -22,24 +22,24 @@
 	<br>
 	<p>
 		<table align = 'center' border = 5>
-			<tr>
-				<th> FLIGHT ID </th>
+			<tr th:each="booking: ${bookings}">
+				<th th:text="${}"> FLIGHT ID </th>
 				
-				<th> AIRLINE </th>
+				<th th:text="${}"> AIRLINE </th>
 	
-				<th> ORIGIN </th>
+				<th th:text="${}"> ORIGIN </th>
 	
-				<th> DESTINATION </th>
+				<th th:text="${}"> DESTINATION </th>
 
-				<th> DEPARTURE DATE </th>
+				<th th:text="${}"> DEPARTURE DATE </th>
 				
-				<th> DEPARTURE TIME </th>
+				<th th:text="${}"> DEPARTURE TIME </th>
 
-				<th> ARRIVAL DATE </th>
+				<th th:text="${}"> ARRIVAL DATE </th>
 				
-				<th> ARRIVAL TIME </th>
+				<th th:text="${}"> ARRIVAL TIME </th>
 				
-				<th> OFFER </th>
+				<th th:text="${}"> OFFER </th>
 			</tr>
 			<tr>
 				<td><input type="text" name="id" DISABLED></td>
