--- a/Frontend/src/main/resources/templates/Goingback.html
+++ b/Frontend/src/main/resources/templates/Goingback.html
@@ -3,8 +3,7 @@
 <head>
 <link href="estilos/estilos.css" rel="stylesheet" type="text/css">
 </head>
-<body>
-<body background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTTUnI0DSwnGUJw8A2fGVOoCPcYHY45fTgRhPZtlZowPpKU4VwBg" 
+<body background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTTUnI0DSwnGUJw8A2fGVOoCPcYHY45fTgRhPZtlZowPpKU4VwBg" style="color:#FFFFFF" 
 width="500" height="500"/>
 
 
@@ -27,69 +26,22 @@ width="500" height="500"/>
 	
   </tr>
   
-    <tr>
+    <tr th:each="Flights : ${Flights}">
 
-    <td></td>
+    <td th:text="${Flight.airline}"></td>
 
-    <td></td>
+    <td th:text="${Flight.departureDate}"></td>
 
-    <td></td>
+    <td th:text="${Flight.departureTime}"></td>
 	
-	<td></td>
+	<td th:text="${Flight.arrivalDate}"></td>
 	
-	<td></td>
+	<td th:text="${Flight.arrivalTime}"></td>
 	
-	<td></td>
+	<td th:text="${Flight.destination}"></td>
 
   </tr>
 
-  <tr>
-
-    <td></td>
-
-    <td></td>
-
-    <td></td>
-	
-	<td></td>
-	
-	<td></td>
-	
-	<td></td>
-
-  </tr>
-
-  <tr>
-
-    <td></td>
-
-    <td></td>
-	
-	<td></td>
-	
-	<td></td>
-	
-	<td></td>
-	
-	<td></td>
-
-  </tr>
-
-  <tr>
-
-    <td></td>
-
-    <td></td>
-	
-	<td></td>
-	
-	<td></td>
-	
-	<td></td>
-	
-	<td></td>
-
-  </tr>
 
 </table>
 	<table border="1" style="margin: 0 auto;">	
@@ -110,69 +62,24 @@ width="500" height="500"/>
 		
 	  </tr>
 	  
-		<tr>
+		 <tr th:each="Flights : ${Flights}">
 
-		<td></td>
+    <td th:text="${Flight.airline}"></td>
 
-		<td></td>
+    <td th:text="${Flight.departureDate}"></td>
 
-		<td></td>
-		
-		<td></td>
-		
-		<td></td>
-		
-		<td></td>
+    <td th:text="${Flight.departureTime}"></td>
+	
+	<td th:text="${Flight.arrivalDate}"></td>
+	
+	<td th:text="${Flight.arrivalTime}"></td>
+	
+	<td th:text="${Flight.destination}"></td>
 
-	  </tr>
+  </tr>
 
-	  <tr>
 
-		<td></td>
-
-		<td></td>
-
-		<td></td>
-		
-		<td></td>
-		
-		<td></td>
-		
-		<td></td>
-
-	  </tr>
-
-	  <tr>
-
-		<td></td>
-
-		<td></td>
-		
-		<td></td>
-		
-		<td></td>
-		
-		<td></td>
-		
-		<td></td>
-
-	  </tr>
-
-	  <tr>
-
-		<td></td>
-
-		<td></td>
-		
-		<td></td>
-		
-		<td></td>
-		
-		<td></td>
-		
-		<td></td>
-
-	  </tr>
+	 
 
 	</table>
 	<form>
