Revert "Merge branch 'master' of https://github.com/sbs29/DragonRidesBookingBackend"
This reverts commit 15e9e895b4233307a3c2fb64d799d560071af452, reversing
changes made to c51b648969b9c6315cfec4640f08a98abc0158bb.

--- a/Frontend/src/main/resources/templates/Goingback.html
+++ b/Frontend/src/main/resources/templates/Goingback.html
@@ -3,7 +3,8 @@
 <head>
 <link href="estilos/estilos.css" rel="stylesheet" type="text/css">
 </head>
-<body background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTTUnI0DSwnGUJw8A2fGVOoCPcYHY45fTgRhPZtlZowPpKU4VwBg" style="color:#FFFFFF" 
+<body>
+<body background="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTTTUnI0DSwnGUJw8A2fGVOoCPcYHY45fTgRhPZtlZowPpKU4VwBg" 
 width="500" height="500"/>
 
 
@@ -26,22 +27,69 @@ width="500" height="500"/>
 	
   </tr>
   
-    <tr th:each="Flights : ${Flights}">
+    <tr>
 
-    <td th:text="${Flight.airline}"></td>
+    <td></td>
 
-    <td th:text="${Flight.departureDate}"></td>
+    <td></td>
 
-    <td th:text="${Flight.departureTime}"></td>
+    <td></td>
 	
-	<td th:text="${Flight.arrivalDate}"></td>
+	<td></td>
 	
-	<td th:text="${Flight.arrivalTime}"></td>
+	<td></td>
 	
-	<td th:text="${Flight.destination}"></td>
+	<td></td>
 
   </tr>
 
+  <tr>
+
+    <td></td>
+
+    <td></td>
+
+    <td></td>
+	
+	<td></td>
+	
+	<td></td>
+	
+	<td></td>
+
+  </tr>
+
+  <tr>
+
+    <td></td>
+
+    <td></td>
+	
+	<td></td>
+	
+	<td></td>
+	
+	<td></td>
+	
+	<td></td>
+
+  </tr>
+
+  <tr>
+
+    <td></td>
+
+    <td></td>
+	
+	<td></td>
+	
+	<td></td>
+	
+	<td></td>
+	
+	<td></td>
+
+  </tr>
 
 </table>
 	<table border="1" style="margin: 0 auto;">	
@@ -62,24 +110,69 @@ width="500" height="500"/>
 		
 	  </tr>
 	  
-		 <tr th:each="Flights : ${Flights}">
+		<tr>
 
-    <td th:text="${Flight.airline}"></td>
+		<td></td>
 
-    <td th:text="${Flight.departureDate}"></td>
+		<td></td>
 
-    <td th:text="${Flight.departureTime}"></td>
-	
-	<td th:text="${Flight.arrivalDate}"></td>
-	
-	<td th:text="${Flight.arrivalTime}"></td>
-	
-	<td th:text="${Flight.destination}"></td>
+		<td></td>
+		
+		<td></td>
+		
+		<td></td>
+		
+		<td></td>
 
-  </tr>
+	  </tr>
 
+	  <tr>
 
-	 
+		<td></td>
+
+		<td></td>
+
+		<td></td>
+		
+		<td></td>
+		
+		<td></td>
+		
+		<td></td>
+
+	  </tr>
+
+	  <tr>
+
+		<td></td>
+
+		<td></td>
+		
+		<td></td>
+		
+		<td></td>
+		
+		<td></td>
+		
+		<td></td>
+
+	  </tr>
+
+	  <tr>
+
+		<td></td>
+
+		<td></td>
+		
+		<td></td>
+		
+		<td></td>
+		
+		<td></td>
+		
+		<td></td>
+
+	  </tr>
 
 	</table>
 	<form>
