--- a/Frontend/src/main/resources/templates/Goingback.html
+++ b/Frontend/src/main/resources/templates/Goingback.html
@@ -10,7 +10,7 @@ width="500" height="500"/>
 
 <table border="1" style="margin: 0 auto;">
 
-<caption align="top">Ida.</caption>
+<caption align="top">Ida y Vuelta.</caption>
   <tr >
 
     <th >Airline</th>
@@ -28,7 +28,7 @@ width="500" height="500"/>
   </tr>
   
     <tr>
-
+	
     <td th:text="${Flight.airline}"></td>
 
     <td th:text="${Flight.departureDate}"></td>
@@ -42,48 +42,23 @@ width="500" height="500"/>
 	<td th:text="${Flight.destination}"></td>
 
   </tr>
+  
+ 
+  <tr>
+	
+    <td th:text="${Flight.airline}"></td>
 
+    <td th:text="${Flight.departureDate}"></td>
 
+    <td th:text="${Flight.departureTime}"></td>
+	
+	<td th:text="${Flight.arrivalDate}"></td>
+	
+	<td th:text="${Flight.arrivalTime}"></td>
+	
+	<td th:text="${Flight.destination}"></td>
 
-</table>
-	<table border="1" style="margin: 0 auto;">	
-	<caption align="top">Vuelta.<font size="20"></caption>
-		<tr>
-
-		<th>Airline</th>
-
-		<th>DepartureDate</th>
-
-		<th>DepartureTime</th>
-		
-		<th>ArrivalDate</th>
-		
-		<th>ArrivalTime</th>
-		
-		<th>Destination</th>
-		
-	  </tr>
-	  
-		<tr>
-
-		<td th:text="${Flight.airline}"></td>
-
-		<td th:text="${Flight.departureDate}"></td>
-
-		<td th:text="${Flight.departureTime}"></td>
-		
-		<td th:text="${Flight.arrivalDate}"></td>
-		
-		<td th:text="${Flight.arrivalTime}"></td>
-		
-		<td th:text="${Flight.destination}"></td>
-
-	  </tr>
-
-
-
-
-	</table>
+  </tr>
 	<form>
   <input type = "button" value = "Back" style="text-align:center" onclick = "Search()">
 </form>
